style.css
/* ... */
.main .content {
  max-width: 800px;
}

.main .content h2 {
  color: #fff;
  font-size: 2em;
  font-weight: 500;
}

.main .content h2 span {
  font-size: 2.8em;
  font-weight: 600;
}

.main .bio {
  width: 50%;
  line-height: 1.8;
  font-size: 1.2em;
  color: #fff;
  padding: 20px 30px;
}

.animated-text {
  position: relative;
  height: 70px;
  overflow: hidden;
}

.animated-text h3 {
  color: #4e9eff;
  font-size: 3em;
  font-weight: 700;
  line-height: 70px;
  letter-spacing: 1px;
}

.animated-text h3:nth-child(1) {
  animation: text-move 10s infinite;
}

@keyframes text-move {
  0% {
    margin-top: 0;
  }
  25% {
    margin-top: -70px;
  }
  50% {
    margin-top: -140px;
  }
  75% {
    margin-top: -70px;
  }
  100% {
    margin-top: 0;
  }
}

.btn {
  color: #fff;
  background: #3a6cf4;
  font-size: 1em;
  font-weight: 600;
  display: inline-block;
  padding: 10px 20px;
  text-transform: uppercase;
  text-decoration: none;
  letter-spacing: 1px;
  border-radius: 2px;
  margin-top: 30px;
  transition: 0.5s ease;
}

.btn:hover {
  background: #235bf6;
}

.media-icons {
  margin-top: 50px;
}

.media-icons a {
  color: #fff;
  font-size: 25px;
  margin-right: 30px;
}

header {
  z-index: 999;
  position: fixed;
  background: rgba(255, 255, 255, 0.1);
  top: 0;
  left: 0;
  width: 100%;
  padding: 15px 200px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  transition: 0.5s ease;
}

header.sticky {
  background: #3a6cf4;
  padding: 10px 200px;
}

header .brand {
  color: #fff;
  font-size: 1.8em;
  font-weight: 700;
  text-transform: uppercase;
  text-decoration: none;
}
header .brand img {
  width: 15%;
}

header .navigation {
  position: relative;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

header .navigation a {
  color: #fff;
  font-size: 1.2em;
  font-weight: 500;
  text-decoration: none;
  margin: 20px;
}

header .navigation a:hover {
  color: #3a6cf4;
}

header.sticky .navigation a:hover {
  color: #000;
}

body {
  min-height: 110vh;
}

.title {
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.section-title {
  position: relative;
  color: #3a6cf4;
  font-size: 2.2em;
  font-weight: 800;
  margin-bottom: 60px;
}

.section-title:before {
  content: "";
  position: absolute;
  top: 56px;
  left: 50%;
  width: 140px;
  height: 4px;
  background: #3a6cf4;
  transform: translateX(-50%);
}

.section-title:after {
  content: "";
  position: absolute;
  top: 50px;
  left: 50%;
  width: 15px;
  height: 15px;
  border-radius: 50%;
  background: #3a6cf4;
  transform: translateX(-50%);
}

.about .content {
  position: relative;
  width: 100%;
  display: flex;
  justify-content: space-between;
  margin-top: 20px;
}

.about .content .col-left {
  position: relative;
  width: 45%;
}

.about .content .col-right {
  position: relative;
  width: 50%;
}

.about .content .col-left .img-card {
  position: relative;
  width: 100%;
  min-height: 450px;
}

.about .content .col-left .img-card img {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-radius: 10px;
}

.about .content .col-right .content-title {
  font-size: 2em;
  font-weight: 800;
  margin-bottom: 20px;
}

.about .content .col-right .paragraph-text {
  font-size: 1em;
  line-height: 1.8;
}

.skills {
  background: #000016;
}

.skills .content {
  position: relative;
  width: 100%;
  display: flex;
  justify-content: space-between;
  color: #fff;
  margin-top: 20px;
}

.skills .content .col-left {
  position: relative;
  width: 46%;
}

.skills .content .col-left .content-title {
  margin-bottom: 20px;
}

.skills .content .col-right {
  position: relative;
  width: 46%;
}

.skills .content .col-right .bar {
  margin-bottom: 15px;
  padding: 10px;
}

.skills .content .col-right .bar .info {
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin-bottom: 5px;
}

.skills .content .col-right .bar .info span {
  font-size: 18px;
  font-weight: 500;
}

.skills .content .col-right .bar .line {
  position: relative;
  width: 100%;
  height: 15px;
  background: #ccc;
  border-radius: 2px;
}

.skills .content .col-right .bar .line:before {
  content: "";
  position: absolute;
  height: 100%;
  top: 0;
  left: 0;
  border-radius: 2px;
}

.skills .content .col-right .bar .html:before {
  width: 75%;
  background: #e45126;
}

.skills .content .col-right .bar .css:before {
  width: 90%;
  background: #0c73b8;
}

.skills .content .col-right .bar .javascript:before {
  width: 80%;
  background: #e3a324;
}

.skills .content .col-right .bar .sass:before {
  width: 60%;
  background: #30dd6d;
}

.skills .content .col-right .bar .react:before {
  width: 60%;
  background: #6d7eb8;
}
.skills .content .col-right .bar .tailwind:before {
  width: 65%;
  background: #caf8b7;
}
.skills .content .col-right .bar .wordpress:before {
  width: 60%;
  background: #ce6bc1;
}

.services .content {
  display: flex;
  justify-content: flex-start;
  flex-wrap: wrap;
  flex-direction: row;
  margin-top: 20px;
}
.services .service-row {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  width: 100%;
}

.title p {
  font-size: 1em;
  width: 80%;
}

.services .content .card {
  background: #fff;
  width: 340px;
  margin: 10px;
  padding: 25px;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  box-shadow: 0 5px 25px rgba(1 1 1 / 15%);
  border-radius: 10px;
}

.services .content .card .service-icon {
  color: #3a6cf4;
  font-size: 4em;
  text-align: center;
  transition: transform 0.5s ease;
}

.services .content .card:hover .service-icon {
  transform: translateY(-10px);
}

.services .content .card .info {
  text-align: center;
}

.services .content .card .info h3 {
  color: #3a6cf4;
  font-size: 1.2em;
  font-weight: 700;
  margin: 10px;
}

.work {
  background: #000016;
}
/* ... */

